--- a/environment-wasm.yml
+++ b/environment-wasm.yml
@@ -3,7 +3,7 @@ channels:
   - https://repo.prefix.dev/emscripten-forge-dev
 dependencies:
   - emscripten-abi==3.1.73
-  - nlohmann_json=3.11.3
+  - nlohmann_json
   - xeus-lite
   - xeus
   - cpp-argparse
