--- a/environment-wasm.yml
+++ b/environment-wasm.yml
@@ -3,9 +3,9 @@ channels:
   - https://repo.prefix.dev/emscripten-forge-dev
 dependencies:
   - emscripten-abi==3.1.73
-  - nlohmann_json
+  - nlohmann_json=3.11.3
   - xeus-lite
-  - xeus
+  - xeus=5.2.0
   - cpp-argparse
   - pugixml
   - doctest
