Run Emscripten tests in a browser

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -34,7 +34,13 @@ if(WIN32)
 else()
   target_link_libraries(${name} PRIVATE ${ARG_LIBRARIES} ${gtest_libs} ${link_pthreads_lib})
 endif()
+if(EMSCRIPTEN)
+  # Without this cmake will try and get node to run the html file.
+  # This guarantees that it runs the js file, and uses emsdks node.
+  add_test(NAME cppinterop-${name} COMMAND $ENV{EMSDK_NODE} ${name}.js)
+else()
   add_test(NAME cppinterop-${name} COMMAND ${name})
+endif()
   set_tests_properties(cppinterop-${name} PROPERTIES
                        TIMEOUT "${TIMEOUT_VALUE}"
                        ENVIRONMENT "CPLUS_INCLUDE_PATH=${CMAKE_BINARY_DIR}/etc"
