Add cling 1.2 support

--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -28,6 +28,14 @@ jobs:
             cling: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+          - name: win2025-msvc-clang18-cling
+            os: windows-2025
+            compiler: msvc
+            clang-runtime: '18'
+            cling: On
+            cling-version: '1.2'
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
 
     steps:
     - uses: actions/checkout@v4
@@ -154,9 +162,7 @@ jobs:
                 -DLLVM_ENABLE_LIBXML2=OFF                          `
                 ..\llvm
           cmake --build . --config Release --target clang --parallel ${{ env.ncpus }}
-          cmake --build . --config Release --target cling --parallel ${{ env.ncpus }}
-          # Now build gtest.a and gtest_main for CppInterOp to run its tests.
-          cmake --build . --config Release --target gtest_main --parallel ${{ env.ncpus }}
+          cmake --build . --config Release --target clingInterpreter --parallel ${{ env.ncpus }}
         }
         else
         {
@@ -230,6 +236,13 @@ jobs:
             compiler: msvc
             clang-runtime: '20'
             cling: Off
+            cppyy: Off
+          - name: win2025-msvc-clang18-cling
+            os: windows-2025
+            compiler: msvc
+            clang-runtime: '18'
+            cling: On
+            cling-version: '1.2'
             cppyy: Off
 
     steps:
