--- a/.github/workflows/Windows-arm.yml
+++ b/.github/workflows/Windows-arm.yml
@@ -130,6 +130,7 @@ jobs:
           git clone https://github.com/root-project/cling.git
           cd ./cling
           git checkout tags/v${{ matrix.cling-version }}
+          git apply -v ../patches/llvm/cling1.2-LookupHelper.patch
           cd ..
           git clone --depth=1 -b cling-llvm${{ matrix.clang-runtime }} https://github.com/root-project/llvm-project.git
           $env:PWD_DIR= $PWD.Path
@@ -162,6 +163,7 @@ jobs:
                 -DLLVM_ENABLE_LIBXML2=OFF                          `
                 ..\llvm
           cmake --build . --config Release --target clang --parallel ${{ env.ncpus }}
+          cmake --build . --config Release --target LLVMOrcDebugging --parallel ${{ env.ncpus }}
           cmake --build . --config Release --target clingInterpreter --parallel ${{ env.ncpus }}
         }
         else
