--- a/.github/workflows/Ubuntu.yml
+++ b/.github/workflows/Ubuntu.yml
@@ -154,6 +154,7 @@ jobs:
           git clone https://github.com/root-project/cling.git
           cd ./cling
           git checkout tags/v${{ matrix.cling-version }}
+          git apply -v ../patches/llvm/cling1.2-LookupHelper.patch
           cd ..
           git clone --depth=1 -b cling-llvm${{ matrix.clang-runtime }} https://github.com/root-project/llvm-project.git
         else # repl
@@ -180,6 +181,7 @@ jobs:
                 -G Ninja                                           \
                 ../llvm
           ninja clang -j ${{ env.ncpus }}
+          ninja LLVMOrcDebugging -j ${{ env.ncpus }}
           ninja clingInterpreter -j ${{ env.ncpus }}
         else
           # Apply patches
