--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -21,62 +21,62 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: ubu24-arm-clang-repl-19-emscripten
-            os: ubuntu-24.04-arm
-            clang-runtime: '19'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "3.1.73"
-          - name: osx15-arm-clang-repl-19-emscripten
-            os: macos-15
-            clang-runtime: '19'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "3.1.73"
-          - name: ubu24-x86-clang-repl-19-emscripten
-            os: ubuntu-24.04
-            clang-runtime: '19'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "3.1.73"
-          - name: win2025-x86-clang-repl-19-emscripten
-            os: windows-2025
-            clang-runtime: '19'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "3.1.73"
-          - name: ubu24-arm-clang-repl-20-emscripten
-            os: ubuntu-24.04-arm
-            clang-runtime: '20'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "3.1.73"
-          - name: osx15-arm-clang-repl-20-emscripten
-            os: macos-15
-            clang-runtime: '20'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "3.1.73"
-          - name: ubu24-x86-clang-repl-20-emscripten
-            os: ubuntu-24.04
-            clang-runtime: '20'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "3.1.73"
-          - name: win2025-x86-clang-repl-20-emscripten
-            os: windows-2025
-            clang-runtime: '20'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "3.1.73"
+          # - name: ubu24-arm-clang-repl-19-emscripten
+          #   os: ubuntu-24.04-arm
+          #   clang-runtime: '19'
+          #   cling: Off
+          #   llvm_enable_projects: "clang;lld"
+          #   llvm_targets_to_build: "WebAssembly"
+          #   emsdk_ver: "3.1.73"
+          # - name: osx15-arm-clang-repl-19-emscripten
+          #   os: macos-15
+          #   clang-runtime: '19'
+          #   cling: Off
+          #   llvm_enable_projects: "clang;lld"
+          #   llvm_targets_to_build: "WebAssembly"
+          #   emsdk_ver: "3.1.73"
+          # - name: ubu24-x86-clang-repl-19-emscripten
+          #   os: ubuntu-24.04
+          #   clang-runtime: '19'
+          #   cling: Off
+          #   llvm_enable_projects: "clang;lld"
+          #   llvm_targets_to_build: "WebAssembly"
+          #   emsdk_ver: "3.1.73"
+          # - name: win2025-x86-clang-repl-19-emscripten
+          #   os: windows-2025
+          #   clang-runtime: '19'
+          #   cling: Off
+          #   llvm_enable_projects: "clang;lld"
+          #   llvm_targets_to_build: "WebAssembly"
+          #   emsdk_ver: "3.1.73"
+          # - name: ubu24-arm-clang-repl-20-emscripten
+          #   os: ubuntu-24.04-arm
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   llvm_enable_projects: "clang;lld"
+          #   llvm_targets_to_build: "WebAssembly"
+          #   emsdk_ver: "3.1.73"
+          # - name: osx15-arm-clang-repl-20-emscripten
+          #   os: macos-15
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   llvm_enable_projects: "clang;lld"
+          #   llvm_targets_to_build: "WebAssembly"
+          #   emsdk_ver: "3.1.73"
+          # - name: ubu24-x86-clang-repl-20-emscripten
+          #   os: ubuntu-24.04
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   llvm_enable_projects: "clang;lld"
+          #   llvm_targets_to_build: "WebAssembly"
+          #   emsdk_ver: "3.1.73"
+          # - name: win2025-x86-clang-repl-20-emscripten
+          #   os: windows-2025
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   llvm_enable_projects: "clang;lld"
+          #   llvm_targets_to_build: "WebAssembly"
+          #   emsdk_ver: "3.1.73"
 
     steps:
     - uses: actions/checkout@v4
@@ -375,54 +375,54 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: ubu24-x86-clang-repl-19-emscripten_wasm
-            os: ubuntu-24.04
-            clang-runtime: '19'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "3.1.73"
-          - name: osx15-arm-clang-repl-19-emscripten_wasm
-            os: macos-15
-            clang-runtime: '19'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "3.1.73"
-          - name: ubu24-arm-clang-repl-19-emscripten_wasm
-            os: ubuntu-24.04-arm
-            clang-runtime: '19'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "3.1.73"
-          - name: win2025-x86-clang-repl-19-emscripten
-            os: windows-2025
-            clang-runtime: '19'
-            cling: Off
-            micromamba_shell_init: powershell
-            emsdk_ver: "3.1.73"
-          - name: ubu24-x86-clang-repl-20-emscripten_wasm
-            os: ubuntu-24.04
-            clang-runtime: '20'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "3.1.73"
-          - name: osx15-arm-clang-repl-20-emscripten_wasm
-            os: macos-15
-            clang-runtime: '20'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "3.1.73"
-          - name: ubu24-arm-clang-repl-20-emscripten_wasm
-            os: ubuntu-24.04-arm
-            clang-runtime: '20'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "3.1.73"
-          - name: win2025-x86-clang-repl-20-emscripten
-            os: windows-2025
-            clang-runtime: '20'
-            cling: Off
-            micromamba_shell_init: powershell
-            emsdk_ver: "3.1.73"
+          # - name: ubu24-x86-clang-repl-19-emscripten_wasm
+          #   os: ubuntu-24.04
+          #   clang-runtime: '19'
+          #   cling: Off
+          #   micromamba_shell_init: bash
+          #   emsdk_ver: "3.1.73"
+          # - name: osx15-arm-clang-repl-19-emscripten_wasm
+          #   os: macos-15
+          #   clang-runtime: '19'
+          #   cling: Off
+          #   micromamba_shell_init: bash
+          #   emsdk_ver: "3.1.73"
+          # - name: ubu24-arm-clang-repl-19-emscripten_wasm
+          #   os: ubuntu-24.04-arm
+          #   clang-runtime: '19'
+          #   cling: Off
+          #   micromamba_shell_init: bash
+          #   emsdk_ver: "3.1.73"
+          # - name: win2025-x86-clang-repl-19-emscripten
+          #   os: windows-2025
+          #   clang-runtime: '19'
+          #   cling: Off
+          #   micromamba_shell_init: powershell
+          #   emsdk_ver: "3.1.73"
+          # - name: ubu24-x86-clang-repl-20-emscripten_wasm
+          #   os: ubuntu-24.04
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   micromamba_shell_init: bash
+          #   emsdk_ver: "3.1.73"
+          # - name: osx15-arm-clang-repl-20-emscripten_wasm
+          #   os: macos-15
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   micromamba_shell_init: bash
+          #   emsdk_ver: "3.1.73"
+          # - name: ubu24-arm-clang-repl-20-emscripten_wasm
+          #   os: ubuntu-24.04-arm
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   micromamba_shell_init: bash
+          #   emsdk_ver: "3.1.73"
+          # - name: win2025-x86-clang-repl-20-emscripten
+          #   os: windows-2025
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   micromamba_shell_init: powershell
+          #   emsdk_ver: "3.1.73"
 
     steps:
     - uses: actions/checkout@v4
