--- a/.github/actions/Build_and_Test_CppInterOp/action.yml
+++ b/.github/actions/Build_and_Test_CppInterOp/action.yml
@@ -65,12 +65,13 @@ runs:
               --show-leak-kinds=all \
               --track-origins=yes \
               --gen-suppressions=all \
-              --log-fd=9 \
-              unittests/CppInterOp/CppInterOpTests/unittests/bin/${{ env.BUILD_TYPE }}/CppInterOpTests \
-              9>>memcheck.log
+              --log-file=valgrind-raw.log \
+              unittests/CppInterOp/CppInterOpTests/unittests/bin/${{ env.BUILD_TYPE }}/CppInterOpTests
+
+            grep -A 20 "^{$" valgrind-raw.log > suppressions.supp
               
             echo "======= Valgrind log (for suppression generation) ======="
-            cat memcheck.log
+            cat suppressions.supp
           fi
         fi
         echo "CB_PYTHON_DIR=$CB_PYTHON_DIR" >> $GITHUB_ENV
