--- a/.github/actions/Build_and_Test_CppInterOp/action.yml
+++ b/.github/actions/Build_and_Test_CppInterOp/action.yml
@@ -66,7 +66,7 @@ runs:
               CLANG_INTERPRETER="clang"
             fi
             SUPPRESSION_FILE="../etc/${CLANG_INTERPRETER}${CLANG_VERSION}-valgrind.supp"
-            if [[ CLANG_VERSION == "20" ]]; then
+            if [[ "$CLANG_VERSION" == "20" ]]; then
               valgrind --show-error-list=yes --track-origins=yes --error-exitcode=1 \
                 --show-leak-kinds=definite,possible \
                 --suppressions="${SUPPRESSION_FILE}" \
